--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 * {
-box-sizing: border-box;
-padding: 0px;
-border: 0px;
-font-size: 62.5%;
+  box-sizing: border-box;
+  padding: 0rem;
+  border: 0rem;
+  font-size: 62.5%;
 }
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
