--- a/src/Pages/What/What-style.css
+++ b/src/Pages/What/What-style.css
@@ -25,6 +25,14 @@
     margin-top: -2rem;
     color: white;
      }}
+     @media only screen and (max-width: 400px) {
+      .We  {
+        font-family: 'Nunito', sans-serif;
+        font-size: 3rem;
+        font-weight: 300;
+        margin-top: 2rem;
+        color: white;
+         }}
 .TextoWe {
   font-family: 'Nunito', sans-serif;
   text-align: justify;
@@ -46,11 +54,28 @@
     margin-bottom: 4rem;
     color: white;
      }}
+     @media only screen and (max-width: 400px) {
+      .TextoWe  {
+        font-family: 'Nunito', sans-serif;
+        text-align: justify;
+        margin-left: 1rem;
+        width: 80%;
+        font-size: 1.4rem;
+        font-weight: 300;
+        margin-bottom: 4rem;
+        color: white;
+         }}
 .Arte {
   display: flex;
   flex-direction: row;
   margin-bottom: -44rem;
 }
+@media only screen and (max-width: 400px) {
+  .Arte {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -8rem;
+     }}
 .DesignWhat {
   height: 40%;
   margin-left: 2rem;
@@ -65,6 +90,14 @@
     margin-right: 4rem;
     box-shadow: 1rem 1rem 1rem 0.1rem rgb(37, 37, 37);
      }}
+     @media only screen and (max-width: 400px) {
+      .DesignWhat {
+        height: 20rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+        box-shadow: 1rem 1rem 1rem 0.1rem rgb(37, 37, 37);
+         }}
 .DesignMuay {
   height: 40%;
   margin-left: 4rem;
@@ -78,12 +111,20 @@
     margin-right: 4rem;
     box-shadow: 1rem 1rem 1rem 0.1rem rgb(37, 37, 37);
      }}
+     @media only screen and (max-width: 400px) {
+      .DesignMuay {
+        height: 20rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        box-shadow: 1rem 1rem 1rem 0.1rem rgb(37, 37, 37);
+         }}
 .FussnoteWhat {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   text-align: center;
+
   gap: 2rem;
 }
 @media only screen and (max-width: 1400px) {
@@ -96,6 +137,16 @@
     gap: 2rem;
     margin-top: -8rem;
      }}
+     @media only screen and (max-width: 400px) {
+      .FussnoteWhat {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 2rem;
+        margin-top: 10rem;
+         }}
 .MainWhat img{
   width: 4rem;
   height: 4rem;
