--- a/src/Pages/Main/main.css
+++ b/src/Pages/Main/main.css
@@ -1,16 +1,16 @@
-.Contact {
+.Main {
   display: flex;
   flex-direction: column;
 
   width: 100vw; 
-  height: 100vh;
+  height: 150vh;
 
   background-color: rgb(61, 61, 61);
 
   align-items: center;
 
 }
-.ContactContainer {
+.MainContainer {
   display: flex;
   flex-direction: column;
 
@@ -23,77 +23,87 @@
   align-items: center;
   
 }
-.ContatHeader {
+.HeaderText {
   font-family: 'Raleway', sans-serif;
   font-size: 3rem;
   font-weight: 700;
   color: white;
   text-align: center;
-  margin-top: 10rem;
+  margin-top: 20rem;
 }
-.ContatText  {
+.MainText {
   font-family: 'Raleway', sans-serif;
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: 300;
   color: white;
-  text-align: justify;
+  text-align: center;
   margin-bottom: 15rem;
-  width: 60%;
 }
-.ContactCenter {
+.MainContainerCenter {
   display: flex;
   flex-direction: row;
-  gap: 5rem;
-  align-items: center;
-  justify-content: center;
-}
-.Jorg {
-  width:30rem;
-  height: 30rem;
 
-  border-radius: 50%;
-  border-left: solid 0.5rem rgb(187, 39, 96);
-  border-bottom: solid 0.1rem rgb(187, 39, 96);
-  border-top: solid 0.1rem rgb(187, 39, 96);
+  gap: 2rem;
 }
-.ContactLinks {
+.Management {
+  width: 50rem;
+  height: 30rem;
+  border-radius: 2rem;
+  margin-top: -2rem;
+ 
+ }
+.Job {
+  width: 30rem;
+  height: 35rem;
+  border-radius: 2rem;
+
+}
+.Meeting {
+  width: 20rem;
+  height: 45rem;
+  border-radius: 2rem;
+  margin-top: -6rem;
+}
+.BotomContainer {
   display: flex;
   flex-direction: column;
-  width: 20rem;
+align-items: center;
 }
-.Email {
+.BotomText {
+  font-family: 'Raleway', sans-serif;
+  font-size: 3rem;
+  font-weight: 700;
+  color: white;
+  text-align: justify;
+  margin-top: 15rem;
+  
+}
+.BotomTextGeral {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  color: white;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 15rem;
+}
+.Mail {
   all: unset;
 
   font-family: 'Raleway', sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
-  color: white;
-  text-align: center;
+  color: rgb(255, 255, 255);
+  width: 15rem;
 
   padding: 0.5rem;
   border: solid 0.1rem gray;
   border-radius: 1rem;
-  cursor: pointer;
-}
-.Email:hover {
-  background-color: rgb(187, 39, 96);
-}
-.Whats {
-  all: unset;
-
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.6rem;
-  font-weight: 300;
-  color: white;
   text-align: center;
-
-  padding: 0.5rem;
-  border: solid 0.1rem gray;
-  border-radius: 1rem;
   cursor: pointer;
 
-  margin-top:4rem;
+  margin-top: -6rem;
 }
-.Whats:hover {
+.Mail:hover {
   background-color: rgb(187, 39, 96);
 }
