--- a/src/Pages/Projects/projects.css
+++ b/src/Pages/Projects/projects.css
@@ -2,47 +2,117 @@
   display: flex;
   flex-direction: column;
 
-  width: 100vw; 
-  height: 190vh;
+  width: 100vw;
+  height: 180vh;
 
-  background-color: rgb(61, 61, 61);
+  background-image: url('../../assets/background.png');
+  background-size: cover;
 
   align-items: center;
-
+  justify-content: center;
 }
-@media only screen and (max-width: 500px) {
-  .Projects{
-    width: 500px; 
-  height: 290vh;
+
+@media only screen and (max-width: 850px) {
+  .Projects {
+     height: 330vh;
    }}
 
 .ProjectsContainer {
   display: flex;
   flex-direction: column;
-
-  width: 120rem; 
-  height: 100%;
-
-  background-image: url('../../images/background.png');
-  background-size: cover;
+  
+  width: 120rem;
 
   align-items: center;
+  justify-content: center;
   
+}
+.Projects-header {
+  display: flex;
+  flex-direction:column;
+
+  position: absolute;
+
+  width: 120rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.Projects-logoI {
+  width: 20rem;
+  height: 20rem;
+  margin-top: 5rem;
+  margin-left: 50rem;
+  opacity: 20%;
+  
+}
+.Projects-logoI:hover {
+  opacity: 100%;
+}
+.Projects-logoII {
+  width: 30rem;
+  height: 30rem;
+  opacity: 20%;
+  margin-top: 0rem;
+  margin-left: -45rem;
+}
+.Projects-logoII:hover {
+  opacity: 100%;
+}
+.Projects-logoIII {
+  width: 40rem;
+  height: 40rem;
+  opacity: 30%;
+  margin-top: -15rem;
+  margin-left: 50rem;
+}
+.Projects-logoIII:hover {
+  opacity: 100% ;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .Projects-logoI, .Projects-logoII, .Projects-logoIII {
+    animation: Projects-logo-spin infinite 30s alternate-reverse;
+    
+  }
+}
+@media (prefers-reduced-motion: no-preference) {
+  .Projects-logoII {
+    animation: Projects-logo-spin infinite 15s alternate-reverse;
+    
+  }
+}
+@media (prefers-reduced-motion: no-preference) {
+  .Projects-logoIII {
+    animation: Projects-logo-spin infinite 20s alternate-reverse;
+  }
+}
+.Projects-link {
+  color: #61dafb;
+}
+
+@keyframes Projects-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 @media only screen and (max-width: 500px) {
   .Projects{
-    width: 500px; 
-  height: 290vh;
+   
+  height: 270vh;
    }}
+
 .ProjectHeaderText {
   font-family: 'Raleway', sans-serif;
   font-size: 3rem;
   font-weight: 700;
   color: white;
   margin-left: -46rem;
-  margin-top: 10rem;
+  margin-top: 8rem;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 950px) {
   .ProjectHeaderText {
     font-size: 2rem;
     font-weight: 700;
@@ -59,7 +129,7 @@
   margin-left: -52rem;
   margin-bottom:0rem;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 950px) {
   .ProjectText {
     margin-left: 0rem;
     margin-bottom:0rem;
@@ -71,10 +141,11 @@
   align-items: center;
 
 }
-@media only screen and (max-width: 500px) {
-  .ImageContaimer{
+@media only screen and (max-width: 850px) {
+  .ImageContainer{
     display: flex;
     flex-direction: column;
+    align-items: center;
    }}
 .Celular {
   width: 40rem;
@@ -84,11 +155,13 @@
   margin-right: 1rem;
   margin-left: 1rem;
   margin-top: 4rem;
+  z-index: 10;
 }
 @media only screen and (max-width: 500px) {
   .Celular {
-    width: 35rem;
+    width: 30rem;
     height: 40rem;
+   
    }}
 .AceraP {
   width: 40rem;
@@ -98,10 +171,11 @@
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 4rem;
+  z-index: 10;
 }
 @media only screen and (max-width: 500px) {
   .AceraP  {
-    width: 35rem;
+    width: 30rem;
     height: 40rem;
    }}
 .ImageContaimerII {
@@ -110,8 +184,8 @@
 
   align-items: center;
 }
-@media only screen and (max-width: 500px) {
-  .ImageContaimerII {
+@media only screen and (max-width: 850px) {
+  .ImageContainerII {
     display: flex;
     flex-direction: column;
    }}
@@ -123,10 +197,11 @@
   margin-right: 1rem;
   margin-left: 1rem;
   margin-top: 2rem;
+  z-index: 10;
 }
 @media only screen and (max-width: 500px) {
   .Amaral  {
-    width: 35rem;
+    width: 30rem;
     height: 40rem;
    }}
 .Condo {
@@ -137,10 +212,11 @@
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 2rem;
+  z-index: 10;
 }
 @media only screen and (max-width: 500px) {
   .Condo  {
-    width: 35rem;
+    width: 30rem;
     height: 40rem;
    }}
 .ProjectBodenText {
@@ -156,6 +232,7 @@
     font-size: 2rem;
     font-weight: 300;
     text-align: center;
+    margin-top: 4rem;
    }}
 .BodenText {
   font-family: 'Raleway', sans-serif;
@@ -172,7 +249,7 @@
     font-weight: 300;
     text-align: center;
    }}
-.ImageContaimerIII {
+.ImageContainerIII {
   display: flex;
   flex-direction: row;
 
@@ -180,8 +257,8 @@
   margin-top: 2rem;
   gap: 2rem;
 }
-@media only screen and (max-width: 500px) {
-  .ImageContaimerIII {
+@media only screen and (max-width: 850px) {
+  .ImageContainerIII {
     display: flex;
     flex-direction: column;
    }}
@@ -243,6 +320,10 @@
   border-radius: 1rem;
   align-items: center;
 }
+@media only screen and (max-width: 850px) {
+  .ClienteIII {
+  margin-bottom: 10rem;
+   }}
 .Client03 {
   font-family: 'Raleway', sans-serif;
   font-size: 1.6rem;
