--- a/src/Pages/Main/main.css
+++ b/src/Pages/Main/main.css
@@ -24,9 +24,15 @@
 @media only screen and (max-width: 950px) {
   .Main {
 
-    height:130vh;
+    height:140vh;
     
    }}
+   @media only screen and (max-width: 414px) {
+    .Main {
+  
+      height:130vh;
+      
+     }}
 .Main-header {
   display: flex;
   flex-direction:column;
@@ -233,7 +239,7 @@
   border-radius: 1rem;
   text-align: center;
   cursor: pointer;
-  margin-bottom: 3rem;
+  margin-bottom: 12rem;
   margin-top: -6rem;
 }
 .Mail:hover {
