--- a/src/Pages/Us/us.css
+++ b/src/Pages/Us/us.css
@@ -22,10 +22,10 @@
   display: flex;
   flex-direction: column;
 
-  width: 120%; 
+  width: 120rem; 
  
   align-items: center;
-  
+  justify-content: center;
 }
 .Us-header {
   display: flex;
@@ -106,6 +106,7 @@
   color: white;
   text-align: left;
   margin-top: 10rem;
+  width: 60%;
   z-index: 10;
 }
 @media only screen and (max-width: 850px) {
