--- a/src/css/portugues.css
+++ b/src/css/portugues.css
@@ -1,4 +1,4 @@
-.Main {
+.Portugues {
     display: flex;
     flex-direction: column;
   
@@ -11,10 +11,10 @@
     justify-content: center;
   }
     @media only screen and (max-width: 1000px) {
-    .Main {
+    .Portugues {
       height: 400vh;
      }}
-.MainContainer {
+.PortuguesContainer {
     display: flex;
     flex-direction: row;
     
@@ -30,12 +30,12 @@
    
   }
   @media only screen and (max-width: 1000px) {
-    .MainContainer {
+    .PortuguesContainer {
       flex-direction: column;
       height: 160%;
      }}
 
-  .LeftContainer {
+  .PortLeftContainer {
     display: flex;
     flex-direction: column;
     
@@ -46,12 +46,12 @@
     justify-content: center;
 
   }
-  .Jorg {
+  .PortJorg {
     width: 30rem;
     margin-bottom: 10rem;
     margin-top: -5rem;
   }
-  .Text {
+  .PortText {
     display: flex;
     flex-direction:column;
     
@@ -60,7 +60,7 @@
     align-items:center;
     justify-content: center;
   }
-  .Name {
+  .PortName {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 4rem;
     color: white;
@@ -68,7 +68,7 @@
     text-align: left;
     margin-left: 14rem;
   }
-  .Work {
+  .PortWork {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 4rem;
     color: #be5f97;
@@ -77,7 +77,7 @@
     width: 40rem;
     text-align: left;
   }
-  .WorkI {
+  .PortWorkI {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 2rem;
     color: #be5f97;
@@ -86,7 +86,7 @@
     width: 40rem;
     text-align: left;
   }
-  .WorkII {
+  .PortWorkII {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 3rem;
     color: #10529c;
@@ -95,7 +95,7 @@
     width: 40rem;
     text-align: left;
   }
-  .WorkIII {
+  .PortWorkIII {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 3rem;
     color: #1583b6;
@@ -104,7 +104,7 @@
     width: 40rem;
     text-align: left;
   }
-  .WorkIV {
+  .PortWorkIV {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 2rem;
     color: #1583b6;
@@ -113,7 +113,7 @@
     width: 40rem;
     text-align: left;
   }
-  .RightContainer {
+  .PortRightContainer {
     display: flex;
     flex-direction: column;
     
@@ -122,13 +122,13 @@
     align-items:left;
     justify-content: center;
   }
-  .EngResumePo {
+  .PortResumePo {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
  
   }
-  .Resume {
+  .PortResume {
     all: unset;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 1.4rem;
@@ -142,16 +142,16 @@
     margin-top: -5rem;
     cursor: pointer;
   }
-  .Resume:hover {
+  .PortResume:hover {
     opacity: 60%;
   }
-  .Bem {
+  .PortBem {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 4rem;
     color: white;
    
   }
-  .Text-Right {
+  .PortText-Right {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 2rem;
     color: white;
@@ -159,7 +159,7 @@
     
     padding-right: 5%;
   }
-  .Second {
+  .PortSecond {
     display: flex;
     flex-direction: row;
     
@@ -169,23 +169,23 @@
     justify-content: center;
   }
   @media only screen and (max-width: 1000px) {
-    .Second {
+    .PortSecond {
       flex-direction: column;
      }}
-  .Agile {
+  .PortAgile {
     background-color: white;
     border-radius: 2rem;
     border-radius: 50%;
     border: solid 1rem rgb(53, 148, 226);
   }
-  .Text-Agile {
+  .PortText-Agile {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 2rem;
     color: white;
     text-align: justify;
    
   }
-.BodenContainer {
+.PortBodenContainer {
   display: flex;
   flex-direction: column;
   
@@ -200,13 +200,13 @@
   
    
 }
-.Design {
+.PortDesign {
   font-family: 'Nanum Gothic', sans-serif;
   font-size: 4rem;
   color: #10529c;
   margin-left: 9%;
 }
-.Text-Design {
+.PortText-Design {
   font-family: 'Nanum Gothic', sans-serif;
   font-size: 2rem;
   color: white;
@@ -214,7 +214,7 @@
   padding-left: 9%;
   padding-right: 5%;
 }
-.Some-Design {
+.PortSome-Design {
   font-family: 'Nanum Gothic', sans-serif;
   font-size: 2rem;
   color: white;
@@ -222,7 +222,7 @@
   padding-left: 9%;
   padding-right: 5%;
 }
-.Cards {
+.PortCards {
   display: flex;
   flex-direction: row;
   gap: 3rem;
@@ -231,10 +231,6 @@
   margin-bottom: 3rem;
   margin-top: 2rem;
 }
-@media only screen and (max-width: 750px) {
-  .Cards {
-    flex-direction: column;
-   }}
 .Amarals {
   width: 28%;
   background-color: #1583b6;
@@ -253,7 +249,7 @@
   border-radius: 2rem;
   background-color: #1583b6;
 }
-.EngClient {
+.PortClient {
   font-family: 'Nanum Gothic', sans-serif;
   font-size: 2rem;
   color: white;
@@ -264,15 +260,12 @@
 }
 .UsBodenImages {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+
   gap: 1rem;
   align-items: center;
   justify-content: center;
 }
-@media only screen and (max-width: 750px) {
-  .UsBodenImages {
-    flex-direction: column;
-   }}
 .UsClients {
   height: 5rem;
   border-radius: 1rem;
@@ -281,15 +274,12 @@
 .UsBodenImagesII {
   display: flex;
   flex-direction: row;
+
   gap: 1rem;
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem;
 }
-@media only screen and (max-width: 750px) {
-  .UsBodenImagesII {
-    flex-direction: column;
-   }}
 .UsClientsII {
   height: 5rem;
   border-radius: 1rem;
