--- a/src/css/main.css
+++ b/src/css/main.css
@@ -122,7 +122,7 @@
     align-items:left;
     justify-content: center;
   }
-  .EngResumePo {
+  .EngResume {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
